[package]

name = "rust-snake"
version = "0.1.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
tags = []

[profile.dev]
opt-level = 2
debug = false

[profile.release]
opt-level = 2
debug = false

[[bin]]

name = "sea_snake_escape"
path = "src/main.rs"

[dependencies]
piston = "0.2.0"
shader_version = "0.1.0"
piston2d-graphics = "0.1.4"
interpolation = "0.1.0"
current = "0.1.0"
gfx = "0.6.3"
piston2d-glium_graphics = "0.1.0"
num = "0.1.25"

[dependencies.start_piston]
git = "https://github.com/bvssvni/start_piston"
features = ["include_opengl", "include_gfx", "include_glium", "include_sdl2"]
